--- a/71-2010/jessie/etc/systemd/system/x-daemon-3seats@.service
+++ b/71-2010/jessie/etc/systemd/system/x-daemon-3seats@.service
@@ -5,7 +5,7 @@ StopWhenUnneeded=true
 
 [Service]
 Type=forking
-ExecStartPre=/bin/cp /etc/X11/xorg.conf.d/sm501-dualhead.conf.in /run/systemd/x-daemon%i.conf ; /bin/sed -i s/@X-DAEMON-SEAT@/__fake-seat%i__/g /run/systemd/x-daemon%i.conf
+ExecStartPre=/bin/cp /etc/X11/xorg.conf.d/tn502-3seats.conf.in /run/systemd/x-daemon-3seats%i.conf ; /bin/sed -i s/@X-DAEMON-SEAT@/__fake-seat%i__/g /run/systemd/x-daemon-3seats%i.conf
 ExecStart=/etc/systemd/scripts/x-daemon %i -seat __fake-seat%i__ -config /run/systemd/x-daemon%i.conf -nolisten tcp -dpms -s 0
 ExecStartPost=/usr/bin/xrandr -d %i --output VGA --auto --right-of LVDS
 
