--- a/71-2010/jessie/etc/udev/rules.d/71-3seats-3hubs.rules.in
+++ b/71-2010/jessie/etc/udev/rules.d/71-3seats-3hubs.rules.in
@@ -1,2 +1,2 @@
-SUBSYSTEMS=="pci", ATTR{vendor}=="0x126f", ATTR{device}=="0x0501", TAG+="seat", TAG+="master-of-seat", ENV{ID_AUTOSEAT}="1", ENV{ID_FOR_SEAT}="tn"
+SUBSYSTEMS=="pci", ATTR{vendor}=="0x126f", ATTR{device}=="0x0501", TAG+="seat", TAG+="master-of-seat", ENV{ID_AUTOSEAT}="1", ENV{ID_FOR_SEAT}="L"
 SUBSYSTEM=="usb", ATTR{idVendor}=="05e3", ATTR{idProduct}=="0608", TAG+="master-of-seat"
