Adicionada heurística para adaptar os arquivos de configuração de acordo com o endereço PCI da placa de vídeo TN-502, detectado automaticamente pelos scripts de auto-instalação.

--- a/71-2010/jessie/etc/X11/xorg.conf.d/tn502-2seats.conf.in
+++ b/71-2010/jessie/etc/X11/xorg.conf.d/tn502-2seats.conf.in
@@ -1,7 +1,7 @@
 Section "Device"
     MatchSeat "seat-tn"
     Identifier "videocard_sm501"
-    BusID "PCI:4:1:0"
+    BusID "PCI:@TN502_ADDRESS@"
     Driver "siliconmotion"
     Option "PanelSize" "1360x768"
 EndSection
