--- a/71-2010/jessie/etc/X11/xorg.conf.d/tn502-3seats.conf.in
+++ b/71-2010/jessie/etc/X11/xorg.conf.d/tn502-3seats.conf.in
@@ -1,14 +1,14 @@
 Section "Device"
-    MatchSeat "__x-daemon:@TN502_DISPLAY@__"
+    MatchSeat "__x-daemon@TN502_DISPLAY@__"
     Identifier "videocard_sm501_dualhead"
-    BusID "PCI:4:1:0"
+    BusID "PCI:@TN502_ADDRESS@"
     Driver "siliconmotion"
     Option "PanelSize" "1360x768"
     Option "Dualhead" "true"
 EndSection
 
 Section "Screen"
-    MatchSeat "__x-daemon:@TN502_DISPLAY@__"
+    MatchSeat "__x-daemon@TN502_DISPLAY@__"
     Identifier "screen_sm501_dualhead"
     Device "videocard_sm501_dualhead"
     DefaultDepth 16
