--- a/71-2010/jessie/etc/lightdm/lightdm.conf.d/xephyr-3seats.conf.in
+++ b/71-2010/jessie/etc/lightdm/lightdm.conf.d/xephyr-3seats.conf.in
@@ -1,5 +1,5 @@
 [Seat:seat-L]
-xserver-command=Xephyr -sw-cursor -dpi 96 -xkbrules evdev -xkblayout br -xkbmodel abnt2 -host-display :90 -output LVDS
+xserver-command=Xephyr -sw-cursor -dpi 96 -xkbrules evdev -xkblayout br -xkbmodel abnt2 -host-display @TN502_DISPLAY@ -output LVDS
 
 [Seat:seat-V]
-xserver-command=Xephyr -sw-cursor -dpi 96 -xkbrules evdev -xkblayout br -xkbmodel abnt2 -host-display :90 -output VGA
+xserver-command=Xephyr -sw-cursor -dpi 96 -xkbrules evdev -xkblayout br -xkbmodel abnt2 -host-display @TN502_DISPLAY@ -output VGA
