--- a/71-2010/jessie/etc/X11/xorg.conf.d/tn502-2seats.conf.in
+++ b/71-2010/jessie/etc/X11/xorg.conf.d/tn502-2seats.conf.in
@@ -1,5 +1,6 @@
 Section "Device"
-    MatchSeat "seat-tn"
+    MatchSeat "seat-usb"
+    MatchSeat "seat-tn502"
     Identifier "videocard_sm501"
     BusID "PCI:@TN502_ADDRESS@"
     Driver "siliconmotion"
@@ -7,7 +8,8 @@ Section "Device"
 EndSection
 
 Section "Screen"
-    MatchSeat "seat-tn"
+    MatchSeat "seat-usb"
+    MatchSeat "seat-tn502"
     Identifier "screen_sm501"
     Device "videocard_sm501"
     DefaultDepth 16
