Adicionada opção para esconder o cursor do servidor Xorg de base para 3 terminais.

--- a/etc/systemd/system/x-daemon-3seats@.service
+++ b/etc/systemd/system/x-daemon-3seats@.service
@@ -5,7 +5,7 @@ StopWhenUnneeded=true
 
 [Service]
 Type=forking
-ExecStart=/etc/systemd/scripts/x-daemon %i -seat __x-daemon%i__ -nolisten tcp -dpms -s 0
+ExecStart=/etc/systemd/scripts/x-daemon %i -seat __x-daemon%i__ -nolisten tcp -dpms -s 0 -nocursor
 ExecStartPost=/usr/bin/xrandr -d %i --output VGA --auto --right-of LVDS
 
 [Install]
