--- a/etc/X11/xorg.conf.d/nested-3seats.conf.in
+++ b/etc/X11/xorg.conf.d/nested-3seats.conf.in
@@ -3,7 +3,7 @@ Section "Device"
     MatchSeat "seat-usb4"
     Identifier "nested_device"
     Driver "nested"
-    Option "Display" "@TN502_DISPLAY"
+    Option "Display" "@TN502_DISPLAY@"
 EndSection
 
 Section "Screen"
