--- a/etc/lightdm/lightdm.conf.d/xephyr-2seats.conf.in
+++ b/etc/lightdm/lightdm.conf.d/xephyr-2seats.conf.in
@@ -1,2 +1,2 @@
-[Seat:seat-usb]
-xserver-command=Xephyr -sw-cursor -dpi 96 -xkbrules evdev -xkblayout br -xkbmodel abnt2 -host-display @TN502_DISPLAY@ -output LVDS
+[Seat:seat-tn502]
+xserver-command=Xephyr -sw-cursor -dpi 96 -xkbrules evdev -xkblayout br -xkbmodel abnt2 -host-display @TN502_DISPLAY@ -fullscreen
