Fixado o número de display do servidor X de base para 3 terminais em :0.

--- a/etc/X11/xorg.conf.d/nested-3seats.conf
+++ b/etc/X11/xorg.conf.d/nested-3seats.conf
@@ -3,7 +3,7 @@ Section "Device"
     MatchSeat "seat-usb4"
     Identifier "nested_device"
     Driver "nested"
-    Option "Display" "@TN502_DISPLAY@"
+    Option "Display" ":0"
 EndSection
 
 Section "Screen"
