--- a/etc/X11/xorg.conf.d/nested-5seats.conf
+++ b/etc/X11/xorg.conf.d/nested-5seats.conf
@@ -3,7 +3,7 @@ Section "Device"
     MatchSeat "seat-usb3"
     Identifier "nested_device_0"
     Driver "nested"
-    Option "Display" "@TN502_DISPLAY@.0"
+    Option "Display" ":0.0"
 EndSection
 
 Section "Device"
@@ -11,7 +11,7 @@ Section "Device"
     MatchSeat "seat-usb4"
     Identifier "nested_device_1"
     Driver "nested"
-    Option "Display" "@TN502_DISPLAY@.1"
+    Option "Display" ":0.1"
 EndSection
 
 Section "Screen"
