Modificados os arquivos de configuração do Xorg para simplificar a ativação da segunda saída de vídeo da placa TN-502.

--- a/etc/X11/xorg.conf.d/tn502-2seats-nested.conf.in
+++ b/etc/X11/xorg.conf.d/tn502-2seats-nested.conf.in
@@ -1,6 +1,6 @@
 Section "Device"
     MatchSeat "__fake-seat__"
-    Identifier "videocard_tn502"
+    Identifier "ThinNetworks TN-502 PCI Video Card"
     BusID "PCI:@TN502_ADDRESS@"
     Driver "siliconmotion"
     Option "PanelSize" "1360x768"
@@ -8,7 +8,7 @@ EndSection
 
 Section "Screen"
     MatchSeat "__fake-seat__"
-    Identifier "screen_tn502"
-    Device "videocard_tn502"
+    Identifier "ThinNetworks TN-502 Screen"
+    Device "ThinNetworks TN-502 PCI Video Card"
     DefaultDepth 16
 EndSection
