--- a/etc/X11/xorg.conf.d/nested-3seats.conf
+++ b/etc/X11/xorg.conf.d/nested-3seats.conf
@@ -1,25 +1,23 @@
 Section "Device"
     MatchSeat "seat-usb2"
     MatchSeat "seat-usb4"
-    Identifier "nested_device"
+    Identifier "Nested Device"
     Driver "nested"
     Option "Display" ":0"
 EndSection
 
 Section "Screen"
     MatchSeat "seat-usb2"
-    Identifier "nested_screen_LVDS"
-    Device "nested_device"
+    Identifier "LVDS Nested Screen"
+    Device "Nested Device"
     DefaultDepth 16
     Option "Output" "LVDS"
 EndSection
 
 Section "Screen"
     MatchSeat "seat-usb4"
-    Identifier "nested_screen_VGA"
-    Device "nested_device"
+    Identifier "VGA Nested Screen"
+    Device "Nested Device"
     DefaultDepth 16
     Option "Output" "VGA"
-    Option "Enable" "true"
-    Option "RightOf" "LVDS"
 EndSection
