--- a/etc/X11/xorg.conf.d/nested-5seats.conf
+++ b/etc/X11/xorg.conf.d/nested-5seats.conf
@@ -1,7 +1,7 @@
 Section "Device"
     MatchSeat "seat-usb1"
     MatchSeat "seat-usb3"
-    Identifier "nested_device_0"
+    Identifier "Nested Device 0"
     Driver "nested"
     Option "Display" ":0.0"
 EndSection
@@ -9,41 +9,39 @@ EndSection
 Section "Device"
     MatchSeat "seat-usb2"
     MatchSeat "seat-usb4"
-    Identifier "nested_device_1"
+    Identifier "Nested Device 1"
     Driver "nested"
     Option "Display" ":0.1"
 EndSection
 
 Section "Screen"
     MatchSeat "seat-usb1"
-    Identifier "nested_screen_VGA_0"
-    Device "nested_device_0"
+    Identifier "VGA Nested Screen 0"
+    Device "Nested Device 0"
     DefaultDepth 16
     Option "Output" "VGA"
 EndSection
 
 Section "Screen"
     MatchSeat "seat-usb3"
-    Identifier "nested_screen_LVDS_0"
-    Device "nested_device_0"
+    Identifier "LVDS Nested Screen 0"
+    Device "Nested Device 0"
     DefaultDepth 16
     Option "Output" "LVDS"
 EndSection
 
 Section "Screen"
     MatchSeat "seat-usb2"
-    Identifier "nested_screen_LVDS_1"
-    Device "nested_device_1"
+    Identifier "LVDS Nested Screen 1"
+    Device "Nested Device 1"
     DefaultDepth 16
     Option "Output" "LVDS"
 EndSection
 
 Section "Screen"
     MatchSeat "seat-usb4"
-    Identifier "nested_screen_VGA_1"
-    Device "nested_device_1"
+    Identifier "VGA Nested Screen 1"
+    Device "Nested Device 1"
     DefaultDepth 16
     Option "Output" "VGA"
-    Option "Enable" "true"
-    Option "RightOf" "LVDS"
 EndSection
