--- a/etc/lightdm/lightdm.conf.d/xephyr-2seats.conf
+++ b/etc/lightdm/lightdm.conf.d/xephyr-2seats.conf
@@ -1,2 +1,2 @@
 [Seat:seat-tn502]
-xserver-command=Xephyr -sw-cursor -dpi 96 -xkbrules evdev -xkblayout br -xkbmodel abnt2 -host-display :0 -fullscreen
+xserver-command=env DISPLAY=:0 Xephyr -sw-cursor -dpi 96 -xkbrules evdev -xkblayout br -xkbmodel abnt2 -fullscreen
