--- a/etc/lightdm/lightdm.conf.d/xephyr-3seats.conf
+++ b/etc/lightdm/lightdm.conf.d/xephyr-3seats.conf
@@ -1,5 +1,5 @@
 [Seat:seat-usb2]
-xserver-command=Xephyr -sw-cursor -dpi 96 -xkbrules evdev -xkblayout br -xkbmodel abnt2 -host-display :0 -output LVDS
+xserver-command=env DISPLAY=:0 Xephyr -sw-cursor -dpi 96 -xkbrules evdev -xkblayout br -xkbmodel abnt2 -output LVDS
 
 [Seat:seat-usb4]
-xserver-command=Xephyr -sw-cursor -dpi 96 -xkbrules evdev -xkblayout br -xkbmodel abnt2 -host-display :0 -output VGA
+xserver-command=evn DISPLAY=:0 Xephyr -sw-cursor -dpi 96 -xkbrules evdev -xkblayout br -xkbmodel abnt2 -output VGA
