--- a/etc/lightdm/lightdm.conf.d/xephyr-5seats.conf
+++ b/etc/lightdm/lightdm.conf.d/xephyr-5seats.conf
@@ -1,11 +1,11 @@
 [Seat:seat-usb1]
-xserver-command=Xephyr -sw-cursor -dpi 96 -xkbrules evdev -xkblayout br -xkbmodel abnt2 -host-display :0.0 -output VGA
+xserver-command=env DISPLAY=:0.0 Xephyr -sw-cursor -dpi 96 -xkbrules evdev -xkblayout br -xkbmodel abnt2 -output VGA
 
 [Seat:seat-usb3]
-xserver-command=Xephyr -sw-cursor -dpi 96 -xkbrules evdev -xkblayout br -xkbmodel abnt2 -host-display :0.0 -output LVDS
+xserver-command=env DISPLAY=:0.0 Xephyr -sw-cursor -dpi 96 -xkbrules evdev -xkblayout br -xkbmodel abnt2 -output LVDS
 
 [Seat:seat-usb2]
-xserver-command=Xephyr -sw-cursor -dpi 96 -xkbrules evdev -xkblayout br -xkbmodel abnt2 -host-display :0.1 -output LVDS
+xserver-command=env DISPLAY=:0.1 Xephyr -sw-cursor -dpi 96 -xkbrules evdev -xkblayout br -xkbmodel abnt2 -output LVDS
 
 [Seat:seat-usb4]
-xserver-command=Xephyr -sw-cursor -dpi 96 -xkbrules evdev -xkblayout br -xkbmodel abnt2 -host-display :0.1 -output VGA
+xserver-command=evn DISPLAY=:0.1 Xephyr -sw-cursor -dpi 96 -xkbrules evdev -xkblayout br -xkbmodel abnt2 -output VGA
